[package]
name = "love_note_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-rt = "2.10.0"
actix-web = "4.11.0"
actix-web-actors = "4.3.1"
actix-ws = "0.3.0"
automerge = "0.6.1"
base64 = "0.22.1"
env_logger = "0.11.8"
futures-util = { version = "0.3", features = ["sink"] }
log = "0.4.27"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
